# Meta-Color

./: .gitignore  MISSING_PAPERS.md  README.md  dataset_comprehensive.mat  dataset_paper_mapping.md  main.py  outline.md  pyproject.toml
data/: metadata_registry.json
papers/: 12.464669.pdf_by_PaddleOCR-VL.md  BFD-P, Luo-Rigg-Chromaticity-Discrimination Ellipses for Surface Colours .pdf_by_PaddleOCR-VL.md  BIGC-S-SG-Huang-2011-Testing uniform colour spaces.md  BIGC-T1-SG-Huang Min Evaluation of Threshold Colour Differences using Printed Samples.pdf_by_PaddleOCR-VL.md  BIGC-T2-M-Huang-2010-Small difference different gloss.md  BIGC-T2-M-SG-G-HuangMin-Study on Small Color Difference Evaluation Using Printed Samples with Different Gloss.pdf_by_PaddleOCR-VL.md  Comprehensive-Luo-2023-Test colour-difference formulae.md  Cui - Colour-Difference Evaluation Using CRT Colours. Part I Data Gathering and Testing Colour Difference Formulae.pdf_by_PaddleOCR-VL.md  Cui-NS-Cui-2001-Evaluation using CRT colours Part I.md  Davidson-Davidson-1953-Size acceptable color differences.md  Guan-LCD-Guan-1999-Formula large differences.md  HDR-Display-Xu-2019-Wide range luminance levels.md  HDR-Xu-2019-Wide range luminance levels.md  Leeds-Luo-1987-BFD colour-difference formula Part 1.md  Liang-Liang-2017-Evaluation using display colours.md  Mirjalili - Color-difference formula for evaluating color pairs with no separation.pdf_by_PaddleOCR-VL.md  Morley-Morley-1975-Small moderate differences.md  OSA - MacAdam - Uniform color scales.pdf_by_PaddleOCR-VL.md  (+10 more)
prompts/: LINKED.md  Phase1_Outline.md  (+9 more)
(+47 files in other folders)
